--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,26 @@ h2 {
   font-size: 36px;
   margin: 0;
 }
+
+header {
+  padding: 10px 15px;
+}
+
+.itens-topo {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header img {
+  width: 150px;
+}
+
+header a {
+  font-size: 18px;
+  color: #000;
+  text-decoration: none;
+  padding: 5px;
+  margin: 0 5px;
+}
