--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,41 @@ header a {
   padding: 5px;
   margin: 0 5px;
 }
+
+.image-fundo {
+  background-image: url('/public/assets/capa.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background: linear-gradient(47deg,#000113 0%,#04061d 80%, #04061d 100%);
+  height: 80vh;
+}
+
+.itens-capa {
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.itens-capa p, h1 {
+  max-width: 500px;
+  font-family: 'Anybody', cursive;
+}
+
+.itens-capa p {
+  font-size: 36px;
+  color: rgb(196, 196, 196);
+}
+
+.itens-capa h1 {
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 60px;
+  margin: 0;
+  letter-spacing: 5px;
+  line-height: 70px;
+}
+
