--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,16 @@ header a {
   line-height: 70px;
 }
 
+.secao-produtos {
+  width: 100%;
+  text-align: center;
+  padding: 100px 20px;
+}
+
+figure {
+  margin: 50px 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
