--- a/src/App.css
+++ b/src/App.css
@@ -183,3 +183,38 @@ figure {
   font-size: 22px;
   color: #4a4a4a;
 }
+
+.secao-contato {
+  width: 100%;
+  text-align: center;
+  background-color: #05031b;
+  color: #fff;
+  padding: 100px 20px;
+}
+
+.container-cards {
+  display: flex;
+  justify-content: center;
+}
+
+.container-cards2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 15px;
+}
+
+.container-cards2 div {
+  display: flex;
+  align-items: center;
+  margin: 0 5px;
+}
+
+.container-cards2 img {
+  width: 18px;
+}
+
+.container-cards2 p {
+  font-size: 14px;
+  margin-left: 10px;
+}
