--- a/src/App.css
+++ b/src/App.css
@@ -218,3 +218,13 @@ figure {
   font-size: 14px;
   margin-left: 10px;
 }
+
+footer {
+  background-color: #030303;
+  padding: 20px;
+}
+
+footer p {
+  color: #adadad;
+  text-align: center;
+}
