--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@ h2 {
   margin: 0;
 }
 
+/* Header CSS */
+
 header {
   padding: 10px 15px;
 }
@@ -43,12 +45,14 @@ header a {
   margin: 0 5px;
 }
 
+/* Capa CSS */
+
 .image-fundo {
+  background: linear-gradient(47deg,#000113 0%,#04061d 80%, #04061d 100%);
   background-image: url('/public/assets/capa.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background: linear-gradient(47deg,#000113 0%,#04061d 80%, #04061d 100%);
   height: 80vh;
 }
 
@@ -79,6 +83,8 @@ header a {
   letter-spacing: 5px;
   line-height: 70px;
 }
+
+/* Produtos CSS */
 
 .secao-produtos {
   width: 100%;
@@ -135,6 +141,8 @@ figure {
   margin: 5px;
 }
 
+/* Sobre CSS */
+
 .secao-sobre {
   background-color: #f8f7ff;
   padding: 100px 20px;
@@ -184,6 +192,8 @@ figure {
   color: #4a4a4a;
 }
 
+/* Contato CSS */
+
 .secao-contato {
   width: 100%;
   text-align: center;
@@ -218,6 +228,8 @@ figure {
   font-size: 14px;
   margin-left: 10px;
 }
+
+/* Footer CSS */
 
 footer {
   background-color: #030303;
