--- a/src/componentes/SecaoCapa/style.css
+++ b/src/componentes/SecaoCapa/style.css
@@ -37,3 +37,14 @@
     line-height: 70px;
   }
   
+
+  @media screen and (max-width: 768px) {
+    h1 {
+        font-size: 40px;
+        max-width: 350px;
+    }
+
+    p {
+        font-size: 20px;
+    }
+  }
