--- a/src/componentes/SecaoContato/style.css
+++ b/src/componentes/SecaoContato/style.css
@@ -34,3 +34,10 @@
     font-size: 14px;
     margin-left: 10px;
   }
+
+
+  @media screen and (max-width: 768px) {
+    .secao-contato {
+        padding: 60px 20px;
+    }
+  }
