--- a/src/componentes/SecaoProdutos/style.css
+++ b/src/componentes/SecaoProdutos/style.css
@@ -54,3 +54,21 @@
     text-align: left;
     margin: 5px;
   }
+
+  @media screen and (max-width: 768px) {
+    .secao-produtos {
+        padding: 60px 20px;
+    }
+
+    .cards h3 {
+        font-size: 22px;
+    }
+
+    .cards img {
+        max-height: 100px;
+    }
+
+    .cards p {
+        font-size: 16px;
+    }
+  }
