--- a/src/componentes/SecaoSobre/style.css
+++ b/src/componentes/SecaoSobre/style.css
@@ -44,8 +44,25 @@
     line-height: 42px;
   }
   
-  .box-cards p {
+  .box-cards div p {
     font-size: 22px;
     color: #4a4a4a;
   }
   
+
+  @media screen and (max-width: 768px) {
+    .secao-sobre {
+        padding: 60px 20px;
+    }
+
+    .box-cards {
+        padding: 15px;
+    }
+
+    .box-cards div h3 {
+        font-size: 22px;
+    }
+    .box-cards div p {
+        font-size: 16px;
+    }
+  }
