Aplicação da responsividade em até 550px

--- a/src/componentes/Rodape/style.css
+++ b/src/componentes/Rodape/style.css
@@ -9,3 +9,9 @@ footer {
     color: #adadad;
     text-align: center;
   }
+
+  @media screen and (max-width: 550px) {
+    footer p {
+        font-size: 14px;
+    }
+  }
