--- a/src/componentes/SecaoProdutos/style.css
+++ b/src/componentes/SecaoProdutos/style.css
@@ -72,3 +72,17 @@
         font-size: 16px;
     }
   }
+
+  @media screen and (max-width: 550px) {
+    .secao-produtos {
+        padding: 0 10px;
+    }
+
+    .cards {
+        width: 100%;
+    }
+
+    .secao-produtos ul {
+        align-items: flex-start;
+    }
+  }
