--- a/src/componentes/SecaoSobre/style.css
+++ b/src/componentes/SecaoSobre/style.css
@@ -66,3 +66,20 @@
         font-size: 16px;
     }
   }
+
+  @media screen and (max-width: 550px) {
+    .secao-sobre {
+        padding: 0 10px;
+    }
+
+    .box-cards {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .box-cards img,
+    .box-cards div {
+        width: 100%;
+        height: 300px;
+    }
+  }
