--- a/src/componentes/Topo/style.css
+++ b/src/componentes/Topo/style.css
@@ -23,4 +23,16 @@ header {
     margin: 0 5px;
   }
 
-  
+  @media screen and (max-width: 550px) {
+    .itens-topo {
+        flex-direction: column;
+    }
+
+    nav {
+        width: 100%;
+        text-align: center;
+        padding: 10px;
+        margin-top: 10px;
+        border-top: 1px solid #aaadaf;
+    }
+  }
