--- a/src/componentes/SecaoContato/style.css
+++ b/src/componentes/SecaoContato/style.css
@@ -10,7 +10,7 @@
   
   .container-cards {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
   }
   
   .container-cards2 {
