Alteração no font-size nos itens da capa

--- a/src/componentes/SecaoCapa/style.css
+++ b/src/componentes/SecaoCapa/style.css
@@ -57,4 +57,12 @@
     .itens-capa {
         background-color: rgba(0,0, 0, 0.6);
     }
+
+    .itens-capa p {
+      font-size: 30px;
+    }
+
+    .itens-capa h1 {
+      font-size: 48px;
+    }
   }
